# oxidizer

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: event.rs  handler.rs  index.rs  lib.rs  mock.rs  path.rs  sugar.rs  widget.rs
src/event/: changed.rs
src/sugar/: init.rs  widget.rs
src/widget/: button.rs  checkbox.rs  column.rs  entry.rs  row.rs
