[package]
name = "oxidizer"
version = "0.1.0"
edition = "2018"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
description = "A backend agnostic immediate mode GUI library"
repository = "https://github.com/brunocodutra/oxidizer.git"
license = "MIT"
readme = "README.md"
keywords = ["gui", "ui", "async"]
categories = ["gui"]

[dependencies]
derivative = "2.1.1"
maybe-owned = "0.3.4"

[dev-dependencies]
proptest = "0.10.1"
